# sysfox

./: README.md  main.py  map.txt  network_12.txt  pyproject.toml  requirements.txt  setup.py  x-mask.txt  x-ndp.txt
cli/: audit.py  autopostinstall.py  monitor.py
cli/network/: network.py
core/: logger.py
modules/network/: __init__.py  dns_lookup.py  geolocation.py  interface.py  live_hosts.py  mac_lookup.py  ping.py  report.py  scan.py  traceroute.py  utils.py  whois_lookup.py
sysfox/: main.py
sysfox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sysfox/core/: decorators.py  error_handler.py  logger.py
sysfox/modules/advanced/: fingerprint_hider.py  ndp_detector.py
sysfox/modules/ai/: diagnostic.py
sysfox/modules/network/: dns_lookup.py  geolocation.py  interface.py  ipinfo.py  live_hosts.py  logger.py  mac_lookup.py  ping.py  report.py  scan.py  traceroute.py  utils.py  whois_lookup.py
sysfox/utils/: reporter.py
templates/: report_template.html
