[project]
name = "sysfox"
version = "0.1.0"
description = "Ultimate toolkit for sysadmins, netsec and DevOps"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
  "rich",
  "requests",
  "psutil",
  "scapy",
  "whois",
  "matplotlib"
]
requires-python = ">=3.8"

[project.scripts]
sysfox = "sysfox.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
